test(controller): fix mock isolation in BookControllerTest
Added reset(bookService) in @BeforeEach to ensure proper isolation between
test methods. This prevents Mockito verification errors caused by shared
mock state and multiple invocations being counted across different tests.